[package]
name = "pomy"
version = "0.1.1"
authors = ["jest"]
edition = "2018"
license = "MIT"
description = "a dumb pomodoro timer that doesn't eat your ram or melt cpu"
readme = "README.md"
categories = ["command-line-utilities"]
repository ="https://github.com/jestarray/pom"
homepage = "https://github.com/jestarray/pom"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
chrono = "0.4"
dirs = "2.0.2"
ctrlc = "3.1.4"
rodio = {version = "0.10.0", features=["vorbis"] }